prodMetadata/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>CnP_PaaS__CnP_Item_ID__c</fullName>
        <label>C&amp;P Item ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Discount__c</fullName>
        <label>C&amp;P Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Tax_Deductible__c</fullName>
        <label>C&amp;P Tax Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Tax__c</fullName>
        <label>C&amp;P Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Product_ID__c</fullName>
        <description>The Classy Id for products such as registration</description>
        <label>Classy Product ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Transaction_ID__c</fullName>
        <description>The Classy Transaction that the Opportunity Product is related to</description>
        <label>Classy Transaction ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>